# orchestra

./: Makefile  README.md  pyproject.toml
src/orchestra/: __main__.py  cli.py
src/orchestra_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_cli.py
